# codes

./: .stack.c.swp  README.md  bst.c  ex1.c  rotate.c  stack.c  stacklink.c  storage.c  string.c  test.c  vovel.c
dynamic/: Makefile  add.c  demo.c  (+1 more)
project/: CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  cmake_install.cmake
project/docs/html/: add_8c.html  basic_8h.html  basic_8h__dep__incl.map  basic_8h__dep__incl.md5  basic_8h_source.html  demo_8c.html  demo_8c__incl.map  demo_8c__incl.md5  dir_000001_000000.html  dir_1c9a9ecafe41c88f2c44645798b8ef5f.html  dir_1d5bdb0c0be0a89b98393651a919a599.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  globals.html  globals_func.html  globals_vars.html  stack_8c.html  stack_8c__incl.map  stack_8c__incl.md5  sub_8c.html
project/docs/html/search/: all_0.js  all_2.js  all_4.js  all_5.js  all_6.js  files_0.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  searchdata.js  variables_0.js
project/docs/latex/: add_8c.tex  basic_8h.tex  basic_8h__dep__incl.md5  demo_8c.tex  demo_8c__incl.md5  dir_1c9a9ecafe41c88f2c44645798b8ef5f.tex  dir_1d5bdb0c0be0a89b98393651a919a599.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  refman.tex  stack_8c.tex  stack_8c__incl.md5  sub_8c.tex
project/include/: basic.h
project/src/: demo.c  stack.c
project/src/add/: add.c
project/src/sub/: sub.c
project/test/: demo
(+102 files in other folders)
